--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ main {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  box-sizing: content-box;  
+  box-sizing: content-box;
   border: 1px solid gray;
 }
 
@@ -37,13 +37,14 @@ main {
   height: 40px;
   width: 40px;
   cursor: pointer;
-  box-shadow: 2px 2px 0px 0px white inset, 0px 0px 3px 2px gray inset;
+  box-shadow: 3px 3px 0px 0px white inset, 0px 0px 3px 3px gray inset;
 }
 
 .box_item {
   text-align: center;
   line-height: 40px;
-
+  cursor: pointer;
+  font-size: 25px;
 }
 
 .hide {
