--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ header {
 
 }
 
+h1 {
+  line-height: 50px;
+  font-size: 70px;
+  font-family: 'Nerko One', cursive;
+}
+
 span {
   color: #394a6d;
 }
@@ -119,21 +125,24 @@ li {
 
 ul.options {
   display: none;
+  z-index: 3;
 }
 
 main {
   height: calc(100% - 70px);
   display: flex;
   align-content: center;
+  background-color: #394a6d;
 }
 
 #box_field {
-  background-color: lightgray;
+  background-color: #394a6d;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
   box-sizing: content-box;
   border: 1px solid gray;
+  box-shadow: 0 3px 15px 10px;
 }
 
 .box {
@@ -142,6 +151,9 @@ main {
   width: 40px;
   cursor: pointer;
   box-shadow: 3px 3px 0px 0px white inset, 0px 0px 3px 3px gray inset;
+  border-radius: 5px;
+  margin: 5px;
+  background-color: rgb(167, 167, 167);
 }
 
 .box_item {
