--- a/css/style.css
+++ b/css/style.css
@@ -201,9 +201,7 @@ main {
   background-color: rgb(167, 167, 167);
 }
 
-.box:before {
-  content: '\f48e';
-  display: block;
+.box::before {
   font-size: 25px;
   text-align: center;
   line-height: 40px;
@@ -212,15 +210,14 @@ main {
   display: none;
 }
 
-.box:before {
+.syringe::before {
+  content: '\f48e';
+  display: block;
+}
+
+.mask::before {
   content: '\e063';
   display: block;
-  font-size: 25px;
-  text-align: center;
-  line-height: 40px;
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 400;
-  display: none;
 }
 
 .box_item {
