--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
 
 .numbers {
   height: 100%;
+  width: 100%;
   color: red;
   text-align: center;
   font-size: 50px;
@@ -59,6 +60,7 @@ header {
   border-radius: 10px;
   padding: 0 10px;
   margin-right: 15px;
+  width: 235px;
 }
 
 h1 {
@@ -76,6 +78,8 @@ span {
 
 #hours, #minutes, #seconds {
   color: red;
+  display: inline-block;
+  width: calc(100%/3 - 11px);
 }
 
 .my_select {
@@ -212,7 +216,7 @@ main {
   height: 40px;
   line-height: 40px;
   font-family: 'Font Awesome 5 Free';
-  font-weight: 400;
+  font-weight: 600;
   display: none;
   position: absolute;
   top: 0;
