--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
   width: 75px;
   height: 100%;
   border-radius: 10px;
-  padding: 0 10px;
+  padding: 0 5px;
 }
 
 #time {
@@ -80,6 +80,7 @@ span {
   color: red;
   display: inline-block;
   width: calc(100%/3 - 11px);
+  height: 100%;
 }
 
 .my_select {
