--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 .container {
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 
 header {
@@ -280,7 +281,77 @@ button:hover {
   100% {transform: scale(1)}
 }
 
-img {
-  /*Si puo usare filter per cambiare il colore dell'immagine*/
-  filter: sepia(100%);
+#winner {
+  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  /* display: none; */
+}
+
+#earth {
+  background-image: url('../img/earth.png');
+  background-repeat: repeat;
+  position: relative;
+  margin: auto;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  box-shadow: -120px 5px 120px 10px rgba(0,0,0,.9) inset;
+  filter: drop-shadow(-10px 0px 10px black);
+  transform: rotate3d(1,1,1, 10deg);
+  transform-style: preserve-3d;
+  animation: rotate 15s linear infinite;
+}
+
+#coviddi {
+  color: #FFFFFF;
+  font-size: 80px;
+  font-family: 'Hanalei Fill', cursive;
+  width: 700px;
+  position: absolute;
+  transform: rotateZ(-6deg);
+  top: 60%;
+  left: -33%;
+  filter: drop-shadow(10px 10px 0px black);
+}
+
+#earth > img {
+  width: 200px;
+  position: absolute;
+  left: 30%;
+  top: 15%;
+}
+
+#earth > i {
+  font-size: 70px;
+  color: #FFFFFF;
+  opacity: 1;
+  position: absolute;
+  transform: rotateZ(-6deg);
+}
+
+#earth > i:nth-child(3) {
+  top: 13%;
+  left: 17%;
+}
+
+#earth > i:nth-child(4) {
+  top: 30%;
+  left: -29%;
+}
+
+#earth > i:nth-child(5) {
+  top: 45%;
+}
+@keyframes rotate {
+  from {
+    background-position: 0px;
+  }
+  to {
+    background-position: 1000px;
+  }
 }
