--- a/css/style.css
+++ b/css/style.css
@@ -392,10 +392,17 @@ main {
   transform: scale(1.1);
 }
 
-/*MEDIA-QUERY*/
+/*MEDIA-QUERY altezza e larghezza!!*/
+@media (min-width: 992px) {
+
+}
+
+@media (min-width: 1200px) {
+
+}
+
 @media (min-width: 768px) {}
-@media (min-width: 992px) {}
-@media (min-width: 1200px) {}
+
 @media (max-width: 490px) {}
 
 
